
2008-01-14  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_frame.c, gnome_ui.c: fix capture
		type radio button in menu and some
		debug statements.

2008-01-13  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* Makefile.am, Changelog: added EXTRA_DIST
		net.jarre_de_the.Xvidcap.service.in
	* doc/man/it/xvidcap-dbus-client.1-it.po,
		src/options.c, po/en.po, po/ru.po, 
		po/es.po, po/de.po, po/it.po, 
		po/zh_CN.po, doc/man: 
		C/xvidcap-dbus-client.1.xml, 
		C/xvidcap-dbus-client.1.xml.pot, 
		C/xvidcap.1.xml, C/xvidcap.1.xml.pot, 
		de/xvidcap.1-de.po, 
		de/xvidcap-dbus-client.1.xml, 
		de/xvidcap-dbus-client.1, 
		de/xvidcap-dbus-client.1-de.po, 
		de/xvidcap.1.xml, de/xvidcap.1, 
		it/xvidcap.1-it.po: Preparing
		l10n for 1.1.7
	* docs/xvidcap: C/figures/menu-mf.png, 
		C/figures/menu.png, 
		C/figures/menu-cont.png, 
		C/figures/menu-sf.png, 
		C/figures/menu-about.png, 
		C/figures/menu-save-prefs.png, 
		C/figures/prefs-commands.png, 
		C/figures/prefs-mf.png, 
		C/figures/menu-animate.png, 
		C/figures/menu-prefs.png, 
		C/figures/menu-make-video.png, 
		C/figures/menu-quit.png, 
		C/figures/prefs-sf.png, 
		C/figures/prefs-general.png, 
		C/figures/menu-help.png, 
		C/xvidcap.xml, C/xvidcap.xml.pot, 
		de/xvidcap.xml-de.po, de/xvidcap.xml, 
		it/xvidcap.xml-it.po: Preparing
		l10n of manual for 1.1.7

2007-12-16  Benjamin Larsson  <banan@ludd.ltu.se>
	* src: codecs.c, codecs.h: added codecs
		"Flash Screen Video" and "FFmpeg
		Video 1" for lossless screen
		captures

2007-12-16  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: fix flawed capture size
		calculation with rescale
	* src/gnome_ui.c: fix flawed UI behaviour
		around hiding and showing frame
	* src/Makefile.am: fix build without dbus
 
2007-11-30  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, capture.c, app_data.c, 
		app_data.h, gnome_frame.c, gnome_options.c, 
		options.c, gnome-xvidcap.glade: Add
		functionality for following the mouse